k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: nataliastanko/multi-worker-fib
          # no ports
          # there is nothing that needs to connect directly to multi worker to get some info aout of it
          # but the worker needs to connect to redis
