k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service # redis hostname (env REDIS_HOST)
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 # for outside objects
      targetPort: 6379
