k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional config options for the object
    kubernetes.io/ingress.class: nginx # create ingress controller based on nginx project
     # our nginx behavior
    # rewrite on request
    # example: rewrite /api to just /
    # nginx.ingress.kubernetes.io/rewrite-target: / # old way
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths: # 2 possible paths (routes)
          - path: /?(.*) # / send to pods govern by the service client-cluster-ip-service
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*) # /api send to pods govern by the service server-cluster-ip-service
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
